--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* style.css */
 
 body {
-    font-family: Indie Flower; /* Fallback font family */
+    font-family: IndieFlower; /* Fallback font family */
     text-align: center; /* Center-align text */
     margin: 0; /* Remove default margin */
     background-color: #FADADD; /* Set background color to light pink */
@@ -12,7 +12,7 @@ body {
     flex-direction: column; /* Stack elements vertically */
     align-items: center; /* Center-align items horizontally */
     justify-content: center; /* Center-align items vertically */
-    height: 100vh; /* Make the container full viewport height */
+    height: 100; /* Make the container full viewport height */
 }
 
 #image-container {
@@ -21,7 +21,8 @@ body {
 
 #question {
     font-family: 'Indie+Flower', cursive; /* Apply Sacramento font to the question */
-    font-size: 52px; /* Set font size for the question */
+    font-size: 30px;
+     color: white;/* Set font size for the question */
 }
 
 #options {
